[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/effects/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/main_menu/menu_cam.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/EquipmentPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/FutilePro.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/ui/main_menu/main_menu.gd" type="Script" id=5]
[ext_resource path="res://src/ui/settings/settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/resources/button.tres" type="StyleBox" id=7]
[ext_resource path="res://src/ui/main_menu/help/help.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]

[sub_resource type="StyleBoxFlat" id=10]

[sub_resource type="StyleBoxFlat" id=11]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ParallaxBackground" parent="Node2D" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true
zoom = Vector2( 0.325, 0.325 )
smoothing_enabled = true
smoothing_speed = 1.0
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DevTag" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -347.0
margin_top = -172.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 1 )
text = "CC Dev 2022"
align = 2
valign = 2

[node name="Title" type="Label" parent="Control"]
anchor_right = 1.0
margin_top = 64.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "COSMIC CABLES"
align = 1

[node name="Buttons" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -131.0
margin_right = 163.0
margin_bottom = 309.0
custom_constants/separation = 16
alignment = 1

[node name="Play" type="Button" parent="Control/Buttons"]
margin_top = 68.0
margin_right = 326.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = ExtResource( 7 )
text = "Play"

[node name="Help" type="Button" parent="Control/Buttons"]
margin_top = 148.0
margin_right = 326.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = ExtResource( 7 )
text = "Instructions"

[node name="Settings" type="Button" parent="Control/Buttons"]
margin_top = 228.0
margin_right = 326.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = ExtResource( 7 )
text = "Settings"

[node name="Quit" type="Button" parent="Control/Buttons"]
margin_top = 308.0
margin_right = 326.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = ExtResource( 7 )
text = "Quit"

[node name="Settings" parent="Control" instance=ExtResource( 6 )]
visible = false

[node name="Help" parent="Control" instance=ExtResource( 8 )]
visible = false
mouse_filter = 1

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="button_down" from="Control/Buttons/Play" to="." method="_on_Button_down"]
[connection signal="button_up" from="Control/Buttons/Play" to="." method="_on_Play_button_up"]
[connection signal="mouse_entered" from="Control/Buttons/Play" to="." method="_on_Button_mouse_entered"]
[connection signal="button_down" from="Control/Buttons/Help" to="." method="_on_Button_down"]
[connection signal="button_up" from="Control/Buttons/Help" to="." method="_on_Help_button_up"]
[connection signal="mouse_entered" from="Control/Buttons/Help" to="." method="_on_Button_mouse_entered"]
[connection signal="button_down" from="Control/Buttons/Settings" to="." method="_on_Button_down"]
[connection signal="button_up" from="Control/Buttons/Settings" to="." method="_on_Settings_button_up"]
[connection signal="mouse_entered" from="Control/Buttons/Settings" to="." method="_on_Button_mouse_entered"]
[connection signal="button_down" from="Control/Buttons/Quit" to="." method="_on_Button_down"]
[connection signal="button_up" from="Control/Buttons/Quit" to="." method="_on_Quit_button_up"]
[connection signal="mouse_entered" from="Control/Buttons/Quit" to="." method="_on_Button_mouse_entered"]
